--- a/src/pages/SignUp/SignUp.css
+++ b/src/pages/SignUp/SignUp.css
@@ -58,15 +58,15 @@ ul {
 
 .signup-button {
     border-radius: 32px;
-    background: #9176ff;
-    color: #3639fe;
+    background: red;
+    color: #530000;
     padding: 10px 20px;
     border: none;
     cursor: pointer;
 }
 
 .signup-button:hover {
-    background-color: #402e85;
+    background-color: #fc8080;
 }
 
 small {
