--- a/src/pages/header/header.css
+++ b/src/pages/header/header.css
@@ -35,3 +35,7 @@
 .header-button:hover {
     text-decoration: underline; /* Optional: underline on hover for better visibility */
 }
+
+.watermark{
+    cursor: pointer;
+}
