--- a/src/pages/main/main.css
+++ b/src/pages/main/main.css
@@ -1,27 +1,41 @@
-.master-container{
+.master-container {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 100%;
+    justify-content: space-between;
+ 
 }
 
-
-.class-buttons {
-    width: 60%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-.buttons{
+.q-container {
     display: flex;
     flex-direction: column;
-    
-    width: 25%;
+    justify-content: center;
+    align-items: center;
+    margin: 20px;
+    padding-left: 30px;
+    padding-right: 30px;
+    border: 1px solid gray;
+    border-radius: 10px;
 }
 
-.submit-button{
-    
-    margin: 10px;
+.view{
+    margin-top: 50px;
+    width: 80%;
+}
+
+.top{
+    padding-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.awareness{
+    border: 1px solid gray;
+    border-radius: 10px;
+    padding: 20px;
+    margin-top: 30px;
+    margin-bottom: 50px;
+}
+.awareness h3{
+    cursor:pointer;
 }
