--- a/src/pages/footer/footer.css
+++ b/src/pages/footer/footer.css
@@ -2,11 +2,13 @@
     position: fixed;
     bottom: 0;
     width: 100%;
+    height: 5vh;
     background-color: rgb(86, 86, 86);
-    padding: 10px;
-    color: white;
+    padding-top: 5px;
+    color: #ffffff;
 }
 
 .footer span {
-    cursor: pointer;  
+    cursor: pointer;
+    
 }
